--- a/frontend/locales/en/translations.json
+++ b/frontend/locales/en/translations.json
@@ -35,6 +35,7 @@
   },
   "pages": {
     "index": {
+      "manageRegistrationButton": "Manage registration",
       "registerButton": "Register today!"
     },
     "login": {
@@ -52,6 +53,10 @@
       "description": "Please enter your data to create an account.",
       "submitButton": "Sign up",
       "title": "Sign up"
+    },
+    "userEventRegistration": {
+      "noRegistration": "You have not registered to this event.",
+      "title": "Manage registration"
     },
     "userSettings": {
       "submitButton": "Save",
