frontend: add footer link to admin dashboard

--- a/frontend/locales/en/translations.json
+++ b/frontend/locales/en/translations.json
@@ -8,6 +8,7 @@
   "components": {
     "footer": {
       "menuItems": {
+        "admin-dashboard": "Admin dashboard",
         "home": "Home",
         "login": "Login",
         "signup": "Sign up"
