frontend: add activity registration funcionality

--- a/frontend/locales/pt/translations.json
+++ b/frontend/locales/pt/translations.json
@@ -52,6 +52,8 @@
   },
   "pages": {
     "activities": {
+      "cancelRegistrationButton": "Cancelar inscrição",
+      "registerButton": "Inscrever",
       "title": "Atividades"
     },
     "admin": {
