--- a/frontend/locales/en/translations.json
+++ b/frontend/locales/en/translations.json
@@ -52,6 +52,8 @@
   },
   "pages": {
     "activities": {
+      "cancelRegistrationButton": "Cancel registration",
+      "registerButton": "Register",
       "title": "Activities"
     },
     "admin": {
