--- a/frontend/locales/en/translations.json
+++ b/frontend/locales/en/translations.json
@@ -47,6 +47,7 @@
   },
   "genericErrors": {
     "api": "Sorry, we've encountered a problem on our end. Please wait a moment and try again.",
+    "eventNotFound": "Event not found.",
     "formValidation": "Sorry, some of the values you provided are invalid. Please fix the reported errors and try again.",
     "network": "Sorry, we couldn't reach our servers. Please check your internet connection and try again."
   },
@@ -111,6 +112,12 @@
         "name": "Name"
       },
       "title": "Registrations"
+    },
+    "error": {
+      "adviceEventNotFound": "Please double check the address for typing errors.",
+      "goHomeButton": "Go home",
+      "header": "Oops, an error occurred!",
+      "headerEventNotFound": "Oops, an error occurred!"
     },
     "index": {
       "manageActivitiesButton": "Manage activities",
